// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildUserPrompt — branch coverage snapshots > matches snapshot: context_switch cellar_assistant 1`] = `"combien de magnums ?"`;

exports[`buildUserPrompt — branch coverage snapshots > matches snapshot: context_switch tasting_memory with focus 1`] = `
"[FOCUS MEMOIRE — La relance courte porte probablement sur : Domaine X. Si l'utilisateur demande "combien d'etoiles", "quelle note" ou "quel millesime", reste focalise sur ce vin precis.]
et le 2018 ?"
`;

exports[`buildUserPrompt — branch coverage snapshots > matches snapshot: context_switch wine_conversation pivot exploratoire 1`] = `"Et si je veux plutot un italien ?"`;

exports[`buildUserPrompt — branch coverage snapshots > matches snapshot: context_switch wine_conversation pivot reco 1`] = `"autre chose ?"`;

exports[`buildUserPrompt — branch coverage snapshots > matches snapshot: fallback default reco persistent 1`] = `"et un dessert ?"`;

exports[`buildUserPrompt — branch coverage snapshots > matches snapshot: fallback recommendation_refinement 1`] = `"autre chose en blanc ?"`;

exports[`buildUserPrompt — branch coverage snapshots > matches snapshot: fallback task_request reco immediate 1`] = `"ce soir c'est pizza"`;

exports[`buildUserPrompt — branch coverage snapshots > matches snapshot: fallback tasting_memory with focus 1`] = `
"[FOCUS MEMOIRE — La relance courte porte probablement sur : Mas de Daumas. Reste focalise sur ce vin precis.]
et le 2018 ?"
`;

exports[`buildUserPrompt — branch coverage snapshots > matches snapshot: greeting 1`] = `
"DEMANDE SPECIALE : message d'accueil a l'ouverture de l'app.
1 phrase. Pas de ui_action. Inclus 2-3 action_chips.

Le ton : comme un ami sommelier qui t'accueille. Subtil, jamais vendeur.
Inspire-toi du moment (heure, saison) et glisse une touche personnelle.
Ne cite JAMAIS un vin par son nom. Ne dis pas "Salut l'ami".

Exemples du ton juste :
- (8h, printemps) "Le printemps s'installe, c'est la saison ou les blancs reprennent du service."
- (12h) "Tu as prevu quelque chose de bon ce midi ?"
- (18h, vendredi) "Vendredi soir, la cave t'attend."
- (20h, hiver) "Soiree d'hiver, il fait bon ouvrir quelque chose de reconfortant."
- (apres longue absence) "Ca faisait un moment ! Ta cave n'a pas bouge.""
`;

exports[`buildUserPrompt — branch coverage snapshots > matches snapshot: prefetch 1`] = `
"Demande : suggestions personnalisees pour ce soir, pas de contrainte de plat.
Pas d'accord mets-vins a appliquer : priorise la pertinence contextuelle et la diversite."
`;

exports[`buildUserPrompt — branch coverage snapshots > matches snapshot: recentDrunk trailer 1`] = `
"que boire ?

Vins bus recemment (a eviter) : Domaine A 2020, Domaine B 2019"
`;

exports[`buildUserPrompt — branch coverage snapshots > matches snapshot: smalltalk wine_conversation basic 1`] = `"c'est quoi un Saint-Emilion ?"`;

exports[`buildUserPrompt — branch coverage snapshots > matches snapshot: social_ack idle 1`] = `
"[CONVERSATION — Reponds BRIEVEMENT (1-2 phrases max) + action_chips. Reste sur le sujet actif; ne pivote pas vers un autre vin ou une autre region sans demande explicite.]
ok"
`;

exports[`buildUserPrompt — branch coverage snapshots > matches snapshot: social_ack post_task_ack 1`] = `
"[ACQUITTEMENT — L'utilisateur acquiesce apres ta derniere action. 1 phrase COURTE. Cloture chaleureuse + action_chips pour changer de sujet. Ne lance PAS un nouveau vin, domaine, region ou souvenir non demande.]
merci !"
`;

exports[`buildUserPrompt — branch coverage snapshots > matches snapshot: task_cancel 1`] = `
"[L'utilisateur decline ou veut arreter. Reponds brievement. Propose des action_chips pour changer de sujet.]
laisse tomber"
`;

exports[`buildUserPrompt — branch coverage snapshots > matches snapshot: task_continue collecting encavage 1`] = `"Domaine Tempier 2018"`;

exports[`buildUserPrompt — branch coverage snapshots > matches snapshot: task_continue collecting recommendation 1`] = `"plutot un blanc"`;

exports[`buildUserPrompt — branch coverage snapshots > matches snapshot: unknown with image 1`] = `
"[CONVERSATION — Reponds naturellement. action_chips : questions pour approfondir le sujet, PAS de suggestions de reco cave.]
regarde
L'utilisateur a joint une photo. Analyse-la et reponds en fonction de ce que tu vois."
`;

exports[`buildUserPrompt — branch coverage snapshots > matches snapshot: unknown with image and recentDrunk 1`] = `
"[CONVERSATION — Reponds naturellement. action_chips : questions pour approfondir le sujet, PAS de suggestions de reco cave.]
regarde
L'utilisateur a joint une photo. Analyse-la et reponds en fonction de ce que tu vois."
`;

exports[`buildUserPrompt — branch coverage snapshots > matches snapshot: unknown without image 1`] = `
"[CONVERSATION — Reponds naturellement. action_chips : questions pour approfondir le sujet, PAS de suggestions de reco cave.]
hmm"
`;
